--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "dev": "tsnd  --transpile-only --respawn --ignore-watch node_modules src/server.ts",
     "test": "jest test test/",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
