update structure project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "multi_currency_money",
+  "name": "TDD_testDevelopmentDriver",
   "version": "1.0.0",
   "description": "Aprimorando conhecimentos em TDD",
   "repository": {
